# SpRead

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.hpp  ArchiveFile.cpp  ArchiveFile.hpp  BasicImage.cpp  BasicImage.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ConfigDialog.cpp  ConfigDialog.hpp  DataCache.hpp  ImageFile.cpp  ImageFile.hpp  ImageViewer.cpp  ImageViewer.hpp  MagDialog.cpp  MagDialog.hpp  MainWindow.cpp  MainWindow.hpp  Makefile  OpenDialog.cpp  OpenDialog.hpp  PdfFile.cpp  PdfFile.hpp  Playlist.cpp  Playlist.hpp  Point.cpp  Point.hpp  Prefetcher.cpp  Prefetcher.hpp  SettingDialog.cpp  SettingDialog.hpp  Size.cpp  Size.hpp  SpRead.hpp  StdImgFile.cpp  StdImgFile.hpp  Uncopyable.hpp  Viewer.cpp  (+7 more)
